# judge_gpt

./: .gitignore  README.md  demo.ipynb  judge_demo.ipynb  judge_demo_toss.ipynb  pyproject.toml  read_spreadsheet.ipynb  tools_conf.yaml
conf/: judge.yaml  response_schema.yaml
conf/demo/: judge.yaml  response_schema.yaml
src/judge_gpt/: __init__.py  auth.py  conf.py  gss_reader.py  judge.py  parser.py  tools.py
