[project]
name = "judge-gpt"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Shinichi Kanehira", email = "skanehir1126@gmail.com" }
]
dependencies = [
    "openai>=0.28.1",
    "google>=3.0.0",
    "gspread>=5.11.3",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "streamlit>=1.27.2",
    "matplotlib>=3.7.3",
    "plotly>=5.17.0",
    "seaborn>=0.13.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
